# TurtleWord

./: 20k.txt  main.py  pyproject.toml  turtleGameLogic.py
